Fixed text wrapping and made submit button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,8 @@ html, body {
 }
 .profile {
     display: inline;
-    margin: 5px;
+    margin: 15px;
+    float: left;
 }
 
 .right {
@@ -135,9 +136,9 @@ footer {
     position: relative;
 }
  p {
-    display: inline;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 12pt;
+    text-indent: 15px;
  }
 
  .submit-button {
